--- a/backend/cloudapp/src/main/resources/application.properties
+++ b/backend/cloudapp/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.servlet.context-path=/cloudapp
 # FIX 4.1: Credentials read from environment variables (set in docker-compose)
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://${DOCKER_HOST_IP:localhost}:5433/cloudappdb
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:websitemaster}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:local}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -16,7 +16,10 @@ kafka.topic=chat
 kafka.group.id=group-chat
 spring.kafka.producer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
 spring.kafka.consumer.bootstrap-servers=${DOCKER_HOST_IP:localhost}:${DOCKER_HOST_KAFKA_PORT:9093}
-spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb://websitemaster:local@${DOCKER_HOST_IP:localhost}:27018/cloudappdb?authSource=admin}
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+jwt.expiration.ms=${JWT_EXPIRATION_MS}
+jwt.private-key-path=${JWT_PRIVATE_KEY_PATH}
+jwt.public-key-path=${JWT_PUBLIC_KEY_PATH}
 # FIX 4.9: Expose Prometheus metrics endpoint via Actuator
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
