--- a/backend/petstore/src/main/resources/application.properties
+++ b/backend/petstore/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8083
 server.servlet.context-path=/petstore
 # FIX 4.1: DB credentials from environment variables (set in docker-compose)
 spring.datasource.url=jdbc:mysql://${DOCKER_HOST_IP:localhost}:3307/petstore?serverTimezone=UTC
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
