--- a/env.example
+++ b/env.example
@@ -14,6 +14,9 @@
 JWT_SECRET=CHANGE_ME_GENERATE_WITH_openssl_rand_base64_48
 # Token lifetime in ms (default 4h; was 10 days — reduced for security)
 JWT_EXPIRATION_MS=14400000
+# Absolute file paths on the host for JWT RSA keys (not committed).
+JWT_PRIVATE_KEY_FILE=/absolute/path/to/jwt-private-key.pem
+JWT_PUBLIC_KEY_FILE=/absolute/path/to/jwt-public-key.pub
 
 # --- Internal Service-to-Service Auth ------------------------------------
 # Generate: openssl rand -hex 32
@@ -69,7 +72,7 @@ ML_URL=http://next-nginx-jwt:80/mlops-segmentation
 
 # --- AI Orchestration layer
 CHROMA_HOST=chromadb
-CHROMA_PORT=8123
+CHROMA_PORT=8000
 CHROMA_COLLECTION=user_documents
 CHROMA_PERSIST_DIR=/data/chroma
 
