--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -346,6 +346,13 @@ location /vehicles {
 # =====================================================================
 location /jiraproxy {
     limit_req zone=api_general burst=10 nodelay;
+    auth_jwt_enabled on;
+    auth_jwt_redirect off;
+    auth_jwt_location HEADER=Authorization;
+    auth_jwt_algorithm RS512;
+    auth_jwt_use_keyfile on;
+    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
+    auth_jwt_validate_sub on;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
