--- a/backend/web-proxy/src/main/resources/application.properties
+++ b/backend/web-proxy/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8501
 server.servlet.context-path=/jiraproxy
+jira.domain=${JIRA_DOMAIN:}
+jira.email=${JIRA_EMAIL:}
+jira.api-token=${JIRA_API_TOKEN:}
 management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=always
 management.metrics.export.prometheus.enabled=true
