feat(ai-monitor): add admin cloudapp access, auth propagation, and gateway stability fixes
- add `/cloudapp-admin` nginx route (inject `X-Internal-Auth`, strip user auth) and v1 mapping
- propagate `INTERNAL_SERVICE_TOKEN` across app/infra/test compose and orchestration config
- forward auth headers through orchestration/tools routers into downstream HTTP clients
- add CloudApp `InternalRequestAuthorizer` + `/user/admin/users`; allow internal access in user/cart/order/note/file controllers
- update CloudApp controller tests for new request+authorizer signatures
- update monitor clients/hooks for cloudapp-admin path, stored auth token usage, and 429/5xx retry handling
- update Services Dashboard/Tools Explorer for admin user inspection flow
- fix nginx startup/health checks (`envsubst` template render, install `gettext-base` + `wget`, check `127.0.0.1/nginx_health`)

--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -313,6 +313,7 @@ services:
       OLLAMA_URL: http://host.docker.internal:11434
       LLM_TEMPERATURE: ${LLM_TEMPERATURE}
       LLM_MAX_TOKENS: ${LLM_MAX_TOKENS}
+      INTERNAL_SERVICE_TOKEN: ${INTERNAL_SERVICE_TOKEN}
       CLOUDAPP_URL: ${CLOUDAPP_URL}
       PETSTORE_URL: ${PETSTORE_URL}
       VEHICLES_URL: ${VEHICLES_URL}
