--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -14,7 +14,7 @@ location / {
 # =================================================================
 # API VERSIONING
 # =================================================================
-location ~ ^/v1/(cloudapp|petstore|vehicles|jiraproxy|mlops-segmentation|ai)(/.*)?$ {
+location ~ ^/v1/(cloudapp-admin|cloudapp|petstore|vehicles|jiraproxy|mlops-segmentation|ai)(/.*)?$ {
     rewrite ^/v1/(.*)$ /$1 last;
 }
 
@@ -151,6 +151,47 @@ location /ai/ws/ {
 # =====================================================================
 # CloudApp Routes
 # =====================================================================
+
+# Admin monitor paths.
+# These routes are intended for admin observability views where the monitor
+# inspects any user without requiring end-user JWTs.
+location /cloudapp-admin/ {
+    limit_req zone=api_general burst=20 nodelay;
+
+    if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' $cors_origin always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Requested-With, traceparent, tracestate' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' 86400;
+        add_header 'Content-Length' 0;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        return 204;
+    }
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $cloudapp_backend "http://cloudapp:8099";
+    rewrite ^/cloudapp-admin/(.*)$ /cloudapp/$1 break;
+    proxy_pass $cloudapp_backend;
+
+    proxy_set_header X-Internal-Auth "${INTERNAL_SERVICE_TOKEN}";
+    proxy_set_header Authorization "";
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
 
 # Auth endpoints (register/login) — no JWT required
 location ~ ^/cloudapp/user/(user-register|user-login) {
