--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -164,8 +164,10 @@ services:
     build:
       context: ./frontend/nginx
       dockerfile: Dockerfile
+    environment:
+      - INTERNAL_SERVICE_TOKEN=${INTERNAL_SERVICE_TOKEN}
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost/nginx_health || exit 1"]
+      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1/nginx_health || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 3
