--- a/docker-compose-infrastructure.yml
+++ b/docker-compose-infrastructure.yml
@@ -310,9 +310,10 @@ services:
       PYTHONPATH: /app/src
       PYTHONUNBUFFERED: 1
       ENVIRONMENT: ${ENVIRONMENT}
-      OLLAMA_URL: http://host.docker.internal:11434
+      OLLAMA_URL: ${OLLAMA_URL:-http://host.docker.internal:11434}
       LLM_TEMPERATURE: ${LLM_TEMPERATURE}
       LLM_MAX_TOKENS: ${LLM_MAX_TOKENS}
+      INTERNAL_SERVICE_TOKEN: ${INTERNAL_SERVICE_TOKEN}
       CLOUDAPP_URL: ${CLOUDAPP_URL}
       PETSTORE_URL: ${PETSTORE_URL}
       VEHICLES_URL: ${VEHICLES_URL}
