ci/e2e: harden nightly auth readiness and Playwright login setup
- add CloudApp auth endpoint readiness probe before running Playwright
- retry Playwright API register/login in global setup with backoff
- log login status/body details on auth setup failures for CI diagnostics
- handle Authorization header casing defensively in API login helper
- switch global setup to reuse ensureLoggedIn retry path

ci/e2e: reduce AI gateway throttling and harden ChatLLM/Jira nightly tests

- raise nginx AI rate limits/bursts to avoid CI false-positive 429s
- connect next-chatllm to Ollama via shared Docker network (`OLLAMA_URL`)
- make ChatLLM API route prefer `OLLAMA_URL` over host.docker.internal
- relax ChatLLM frontend Ollama health/model fetch timeouts for CI latency
- increase nightly Jira test timeout to prevent teardown during cleanup

docker-compose: use internal service DNS for cloudapp/petstore in CI

- override cloudapp Postgres and Kafka endpoints to use app-backend service names
- override petstore MySQL endpoint to use internal mysql service name
- avoid host.docker.internal dependency, which fails on GitHub Actions Linux runners
- fix nginx 502s caused by backend startup failures waiting on unreachable host bridge

--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -300,8 +300,11 @@ services:
       - 5333:5333
     environment:
       - DOCKER_HOST_IP=host.docker.internal
+      # CI/Linux: route server-side /api/chat to Ollama over the shared Docker network.
+      - OLLAMA_URL=http://ollama:11434
     networks:
       - frontend
+      - backend
     restart: unless-stopped
 
 # ===========================================================================
