--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -52,7 +52,9 @@ http {
     # =========================================================================
     limit_req_zone $binary_remote_addr zone=api_general:10m rate=30r/s;
     limit_req_zone $binary_remote_addr zone=auth_endpoints:10m rate=5r/s;
-    limit_req_zone $binary_remote_addr zone=ai_endpoints:10m rate=10r/s;
+    # AI monitor + chat UI can burst aggressively (polling + websocket reconnects + retries),
+    # especially in CI. Keep rate limiting, but raise the threshold to avoid false 429s.
+    limit_req_zone $binary_remote_addr zone=ai_endpoints:10m rate=60r/s;
 
     # FIX: Ensure proper HTTP status for rate-limited requests
     limit_req_status 429;
