ci/e2e: harden nightly auth readiness and Playwright login setup
- add CloudApp auth endpoint readiness probe before running Playwright
- retry Playwright API register/login in global setup with backoff
- log login status/body details on auth setup failures for CI diagnostics
- handle Authorization header casing defensively in API login helper
- switch global setup to reuse ensureLoggedIn retry path

docker-compose: use internal service DNS for cloudapp/petstore in CI

- override cloudapp Postgres and Kafka endpoints to use app-backend service names
- override petstore MySQL endpoint to use internal mysql service name
- avoid host.docker.internal dependency, which fails on GitHub Actions Linux runners
- fix nginx 502s caused by backend startup failures waiting on unreachable host bridge

--- a/docker-compose-app.yml
+++ b/docker-compose-app.yml
@@ -74,6 +74,8 @@ services:
       - INTERNAL_SERVICE_TOKEN=${INTERNAL_SERVICE_TOKEN}
       - HEALTH_CHECK_URL=http://localhost:8083/petstore/actuator/health
       # FIX 4.1: DB credentials from .env
+      # Use internal Docker DNS instead of host.docker.internal (not reliable in Linux CI).
+      - SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/petstore?serverTimezone=UTC
       - SPRING_DATASOURCE_USERNAME=${MYSQL_ROOT_USERNAME:?Set MYSQL_ROOT_USERNAME in .env}
       - SPRING_DATASOURCE_PASSWORD=${MYSQL_ROOT_PASSWORD:?Set MYSQL_ROOT_PASSWORD in .env}
       # OpenTelemetry
@@ -107,6 +109,10 @@ services:
       - JWT_PRIVATE_KEY_PATH=/run/secrets/jwt-private-key.pem
       - JWT_PUBLIC_KEY_PATH=/run/secrets/jwt-public-key.pub
       # FIX 4.1: DB credentials from .env
+      # Use internal Docker DNS for CI/Linux compatibility across split compose stacks.
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres:5432/${POSTGRES_DB:?Set POSTGRES_DB in .env}
+      - SPRING_KAFKA_PRODUCER_BOOTSTRAP_SERVERS=broker:29092
+      - SPRING_KAFKA_CONSUMER_BOOTSTRAP_SERVERS=broker:29092
       - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER:?Set POSTGRES_USER in .env}
       - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD:?Set POSTGRES_PASSWORD in .env}
       - SPRING_DATA_MONGODB_URI=mongodb://${MONGO_USER}:${MONGO_PASSWORD}@mongo:27017/${MONGO_DB}?authSource=admin
