--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -232,8 +232,41 @@ location ~ ^/cloudapp/user/(user-register|user-login) {
     proxy_set_header X-Forwarded-Proto $scheme;
 }
 
+# Public health endpoint (kept outside JWT enforcement for health checks/tests)
+location = /cloudapp/actuator/health {
+    limit_req zone=api_general burst=5 nodelay;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $cloudapp_backend "http://cloudapp:8099";
+    proxy_pass $cloudapp_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
+
 # WebSocket endpoint
 location ~ ^/cloudapp/ws {
+    auth_jwt_enabled on;
+    auth_jwt_redirect off;
+    auth_jwt_location HEADER=Authorization;
+    auth_jwt_algorithm RS512;
+    auth_jwt_use_keyfile on;
+    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
+    auth_jwt_validate_sub on;
+
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
@@ -272,6 +305,13 @@ location ~ ^/cloudapp/ws {
 # General cloudapp paths (JWT required)
 location ~ ^/cloudapp/(?!.*(?:user-register|user-login|ws)) {
     limit_req zone=api_general burst=20 nodelay;
+    auth_jwt_enabled on;
+    auth_jwt_redirect off;
+    auth_jwt_location HEADER=Authorization;
+    auth_jwt_algorithm RS512;
+    auth_jwt_use_keyfile on;
+    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
+    auth_jwt_validate_sub on;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -309,8 +349,39 @@ location ~ ^/cloudapp/(?!.*(?:user-register|user-login|ws)) {
 # =====================================================================
 # Petstore Routes
 # =====================================================================
+location = /petstore/actuator/health {
+    limit_req zone=api_general burst=5 nodelay;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $petstore_backend "http://petstore:8083";
+    proxy_pass $petstore_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
+
 location /petstore {
     limit_req zone=api_general burst=20 nodelay;
+    auth_jwt_enabled on;
+    auth_jwt_redirect off;
+    auth_jwt_location HEADER=Authorization;
+    auth_jwt_algorithm RS512;
+    auth_jwt_use_keyfile on;
+    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
+    auth_jwt_validate_sub on;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -347,8 +418,39 @@ location /petstore {
 # =====================================================================
 # Vehicles Routes
 # =====================================================================
+location = /vehicles/actuator/health {
+    limit_req zone=api_general burst=5 nodelay;
+
+    proxy_hide_header Access-Control-Allow-Origin;
+    proxy_hide_header Access-Control-Allow-Credentials;
+    proxy_hide_header Access-Control-Allow-Methods;
+    proxy_hide_header Access-Control-Allow-Headers;
+
+    add_header 'Access-Control-Allow-Origin' $cors_origin always;
+    add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+    set $vehicles_backend "http://vehicles-api:8880";
+    proxy_pass $vehicles_backend;
+
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+}
+
 location /vehicles {
     limit_req zone=api_general burst=20 nodelay;
+    auth_jwt_enabled on;
+    auth_jwt_redirect off;
+    auth_jwt_location HEADER=Authorization;
+    auth_jwt_algorithm RS512;
+    auth_jwt_use_keyfile on;
+    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
+    auth_jwt_validate_sub on;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
