--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -193,8 +193,8 @@ location /cloudapp-admin/ {
     proxy_redirect off;
 }
 
-# Auth endpoints (register/login) — no JWT required
-location ~ ^/cloudapp/user/(user-register|user-login) {
+# Auth endpoints (register/login/logout) — no JWT required
+location ~ ^/cloudapp/user/(user-register|user-login|user-logout) {
     limit_req zone=auth_endpoints burst=3 nodelay;
 
     if ($request_method = 'OPTIONS') {
@@ -261,7 +261,7 @@ location = /cloudapp/actuator/health {
 location ~ ^/cloudapp/ws {
     auth_jwt_enabled on;
     auth_jwt_redirect off;
-    auth_jwt_location HEADER=Authorization;
+    auth_jwt_location HEADER_OR_COOKIE=Authorization,CLOUDAPP_AUTH;
     auth_jwt_algorithm RS512;
     auth_jwt_use_keyfile on;
     auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
@@ -303,11 +303,11 @@ location ~ ^/cloudapp/ws {
 }
 
 # General cloudapp paths (JWT required)
-location ~ ^/cloudapp/(?!.*(?:user-register|user-login|ws)) {
+location ~ ^/cloudapp/(?!.*(?:user-register|user-login|user-logout|ws)) {
     limit_req zone=api_general burst=20 nodelay;
     auth_jwt_enabled on;
     auth_jwt_redirect off;
-    auth_jwt_location HEADER=Authorization;
+    auth_jwt_location HEADER_OR_COOKIE=Authorization,CLOUDAPP_AUTH;
     auth_jwt_algorithm RS512;
     auth_jwt_use_keyfile on;
     auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
