feat(cloudapp-auth): add JWT role claims and admin RBAC for /user/admin/users

--- a/backend/cloudapp/src/test/resources/application-test.properties
+++ b/backend/cloudapp/src/test/resources/application-test.properties
@@ -34,6 +34,7 @@ jwt.secret=${JWT_SECRET:test-secret-key-for-integration-tests-only-change-me}
 jwt.expiration.ms=${JWT_EXPIRATION_MS:3600000}
 jwt.private-key-path=classpath:test-private-key.pem
 jwt.public-key-path=classpath:test-public-key.pub
+cloudapp.security.admin-usernames=${CLOUDAPP_SECURITY_ADMIN_USERNAMES:integrationadmin}
 
 # --- Internal token ---
 internal.service.token=${INTERNAL_SERVICE_TOKEN:test-internal-token}
