feat(auth/e2e): add persisted CloudApp RBAC role management and fix Docker shell/MLOps routing for Playwright

--- a/Dockerfile_FE
+++ b/Dockerfile_FE
@@ -55,6 +55,8 @@ ARG NEXT_PUBLIC_REMOTE_MLOPS_URL
 ENV NEXT_PUBLIC_REMOTE_MLOPS_URL=${NEXT_PUBLIC_REMOTE_MLOPS_URL:-http://localhost:5005}
 ARG NEXT_PUBLIC_REMOTE_PETSTORE_URL
 ENV NEXT_PUBLIC_REMOTE_PETSTORE_URL=${NEXT_PUBLIC_REMOTE_PETSTORE_URL:-http://localhost:5006}
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:80/cloudapp}
 
 ARG SERVICE_PATH
 WORKDIR /app
