--- a/frontend/nginx/conf/nginx.conf
+++ b/frontend/nginx/conf/nginx.conf
@@ -44,7 +44,7 @@ http {
     # =========================================================================
     map $http_origin $cors_origin {
         default "";
-        "~^https?://(localhost|127\.0\.0\.1)(:\d+)?$" $http_origin;
+        "~^https?://(localhost|127\.0\.0\.1|test-shell|test-ai-monitor)(:\d+)?$" $http_origin;
     }
 
     # =========================================================================
