--- a/frontend/nginx/conf/locations.conf
+++ b/frontend/nginx/conf/locations.conf
@@ -152,6 +152,45 @@ location /ai/ws/ {
 # CloudApp Routes
 # =====================================================================
 
+# Internal auth_request targets (replaces custom JWT C module validation)
+location = /_auth/cloudapp/header-or-cookie {
+    internal;
+
+    proxy_pass_request_body off;
+    proxy_set_header Content-Length "";
+    proxy_method GET;
+
+    proxy_set_header Authorization $http_authorization;
+    proxy_set_header Cookie $http_cookie;
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+
+    proxy_pass http://cloudapp:8099/cloudapp/user/auth-check;
+}
+
+location = /_auth/cloudapp/header-only {
+    internal;
+
+    proxy_pass_request_body off;
+    proxy_set_header Content-Length "";
+    proxy_method GET;
+
+    proxy_set_header Authorization $http_authorization;
+    proxy_set_header Cookie "";
+    proxy_set_header traceparent $http_traceparent;
+    proxy_set_header tracestate $http_tracestate;
+    proxy_set_header X-Request-ID $request_id_value;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
+
+    proxy_pass http://cloudapp:8099/cloudapp/user/auth-check;
+}
+
 # Admin monitor paths.
 # These routes are intended for admin observability views where the monitor
 # inspects any user without requiring end-user JWTs.
@@ -259,13 +298,7 @@ location = /cloudapp/actuator/health {
 
 # WebSocket endpoint
 location ~ ^/cloudapp/ws {
-    auth_jwt_enabled on;
-    auth_jwt_redirect off;
-    auth_jwt_location HEADER_OR_COOKIE=Authorization,CLOUDAPP_AUTH;
-    auth_jwt_algorithm RS512;
-    auth_jwt_use_keyfile on;
-    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
-    auth_jwt_validate_sub on;
+    auth_request /_auth/cloudapp/header-or-cookie;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -305,13 +338,7 @@ location ~ ^/cloudapp/ws {
 # General cloudapp paths (JWT required)
 location ~ ^/cloudapp/(?!.*(?:user-register|user-login|user-logout|ws)) {
     limit_req zone=api_general burst=20 nodelay;
-    auth_jwt_enabled on;
-    auth_jwt_redirect off;
-    auth_jwt_location HEADER_OR_COOKIE=Authorization,CLOUDAPP_AUTH;
-    auth_jwt_algorithm RS512;
-    auth_jwt_use_keyfile on;
-    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
-    auth_jwt_validate_sub on;
+    auth_request /_auth/cloudapp/header-or-cookie;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -375,13 +402,7 @@ location = /petstore/actuator/health {
 
 location /petstore {
     limit_req zone=api_general burst=20 nodelay;
-    auth_jwt_enabled on;
-    auth_jwt_redirect off;
-    auth_jwt_location HEADER=Authorization;
-    auth_jwt_algorithm RS512;
-    auth_jwt_use_keyfile on;
-    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
-    auth_jwt_validate_sub on;
+    auth_request /_auth/cloudapp/header-only;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -444,13 +465,7 @@ location = /vehicles/actuator/health {
 
 location /vehicles {
     limit_req zone=api_general burst=20 nodelay;
-    auth_jwt_enabled on;
-    auth_jwt_redirect off;
-    auth_jwt_location HEADER=Authorization;
-    auth_jwt_algorithm RS512;
-    auth_jwt_use_keyfile on;
-    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
-    auth_jwt_validate_sub on;
+    auth_request /_auth/cloudapp/header-only;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
@@ -489,13 +504,7 @@ location /vehicles {
 # =====================================================================
 location /jiraproxy {
     limit_req zone=api_general burst=10 nodelay;
-    auth_jwt_enabled on;
-    auth_jwt_redirect off;
-    auth_jwt_location HEADER=Authorization;
-    auth_jwt_algorithm RS512;
-    auth_jwt_use_keyfile on;
-    auth_jwt_keyfile_path /etc/nginx/localhost+3-key.pub;
-    auth_jwt_validate_sub on;
+    auth_request /_auth/cloudapp/header-only;
 
     if ($request_method = 'OPTIONS') {
         add_header 'Access-Control-Allow-Origin' $cors_origin always;
