--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -167,7 +167,42 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 4: Frontend Unit Tests
+  # JOB 4: API Contract Governance Tests
+  # =========================================================================
+  api-contract-tests:
+    name: "API Contracts — OpenAPI Drift + TS Clients"
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Start backend services
+        run: |
+          set -euo pipefail
+          if ! docker compose -f docker-compose.test.yml up -d --wait --wait-timeout 360 \
+            test-postgres test-mysql test-mongo \
+            test-zookeeper test-kafka \
+            test-cloudapp test-petstore test-vehicles; then
+            docker compose -f docker-compose.test.yml ps || true
+            docker compose -f docker-compose.test.yml logs --tail=300 \
+              test-cloudapp test-petstore test-vehicles \
+              test-postgres test-mysql test-mongo test-kafka test-zookeeper || true
+            exit 1
+          fi
+
+      - name: Run API contract checks
+        run: |
+          docker compose -f docker-compose.test.yml up --build --abort-on-container-exit \
+            test-api-contracts
+
+      - name: Cleanup
+        if: always()
+        run: docker compose -f docker-compose.test.yml down -v --remove-orphans
+
+  # =========================================================================
+  # JOB 5: Frontend Unit Tests
   # =========================================================================
   frontend-unit-tests:
     name: "Frontend — React Unit Tests"
@@ -196,7 +231,7 @@ jobs:
         run: docker compose -f docker-compose.test.yml down -v --remove-orphans
 
   # =========================================================================
-  # JOB 5: Playwright E2E Tests
+  # JOB 6: Playwright E2E Tests
   # =========================================================================
   e2e-tests:
     name: "E2E — Playwright"
@@ -258,7 +293,7 @@ jobs:
   test-summary:
     name: "Test Summary"
     runs-on: ubuntu-latest
-    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, frontend-unit-tests, e2e-tests]
+    needs: [backend-tests, ml-pipeline-tests, nginx-gateway-tests, api-contract-tests, frontend-unit-tests, e2e-tests]
     if: always()
 
     steps:
@@ -271,5 +306,6 @@ jobs:
           echo "| Backend (Spring Boot) | ${{ needs.backend-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| ML Pipeline (pytest) | ${{ needs.ml-pipeline-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| NGINX Gateway | ${{ needs.nginx-gateway-tests.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| API Contracts | ${{ needs.api-contract-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Frontend Unit | ${{ needs.frontend-unit-tests.result }} |" >> $GITHUB_STEP_SUMMARY
           echo "| Playwright E2E | ${{ needs.e2e-tests.result }} |" >> $GITHUB_STEP_SUMMARY
