feat(API contract governance): OpenAPI coverage, contract drift checks, typed client generation, and CI/Docker wiring.

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -295,7 +295,7 @@ services:
       [
         "sh",
         "-lc",
-        "set -eu; BASE_PROJECT=portfolio_test_all; PROJECT=$$BASE_PROJECT; SERVICES='test-backend test-backend-petstore test-backend-vehicles test-backend-webproxy test-ml-pipeline test-ai-orchestration-layer test-frontend-unit test-nginx-gateway test-e2e'; cleanup(){ docker compose -p $$PROJECT -f docker-compose.test.yml down -v --remove-orphans >/dev/null 2>&1 || true; }; trap cleanup EXIT INT TERM; cleanup; for svc in $$SERVICES; do PROJECT=\"$$BASE_PROJECT_$$svc\"; echo ''; echo \"=== Running $$svc ===\"; cleanup; docker compose -p $$PROJECT -f docker-compose.test.yml up --build --force-recreate --abort-on-container-exit $$svc; cleanup; done; PROJECT=$$BASE_PROJECT; trap - EXIT INT TERM; cleanup; echo ''; echo 'All test suites passed.'",
+        "set -eu; BASE_PROJECT=portfolio_test_all; PROJECT=$$BASE_PROJECT; SERVICES='test-backend test-backend-petstore test-backend-vehicles test-backend-webproxy test-ml-pipeline test-ai-orchestration-layer test-frontend-unit test-nginx-gateway test-api-contracts test-e2e'; cleanup(){ docker compose -p $$PROJECT -f docker-compose.test.yml down -v --remove-orphans >/dev/null 2>&1 || true; }; trap cleanup EXIT INT TERM; cleanup; for svc in $$SERVICES; do PROJECT=\"$$BASE_PROJECT_$$svc\"; echo ''; echo \"=== Running $$svc ===\"; cleanup; docker compose -p $$PROJECT -f docker-compose.test.yml up --build --force-recreate --abort-on-container-exit $$svc; cleanup; done; PROJECT=$$BASE_PROJECT; trap - EXIT INT TERM; cleanup; echo ''; echo 'All test suites passed.'",
       ]
 
   # =========================================================================
@@ -316,6 +316,25 @@ services:
         condition: service_healthy
     networks:
       - test-frontend
+      - test-backend
+
+  # =========================================================================
+  # API CONTRACT GOVERNANCE TESTS (OpenAPI snapshots + generated TS clients)
+  # =========================================================================
+  test-api-contracts:
+    image: python:3.12-slim
+    working_dir: /workspace
+    entrypoint: ["python3", "scripts/contracts/openapi_contracts.py", "check", "--check-generated"]
+    volumes:
+      - ./:/workspace
+    depends_on:
+      test-cloudapp:
+        condition: service_healthy
+      test-petstore:
+        condition: service_healthy
+      test-vehicles:
+        condition: service_healthy
+    networks:
       - test-backend
 
   # =========================================================================
